--- a/L07.html
+++ b/L07.html
@@ -116,130 +116,26 @@
 						</ul>
 						<img src="images/listmethods.png" alt="" /><br><br>
 						<img src="images/listmethods2.png" alt="" /><br><br>
+						<p><b>Example Listmethods</b></p>
+						<img src="images/listmethods3.png" alt="" /><br><br>
+
+						<h2><b>two-dimensional lists</b></h2>
+						<ul><li>Two-dimensional list: a list that contains other lists as its elements</li>
+							<ul><li>Also known as nested list</li>
+								<li>Common to think of two-dimensional lists as having rows and
+									columns</li>
+								<li>Useful for working with multiple sets of data</li>
+							</ul>
+							<li>To process data in a two-dimensional list need to use two
+								indexes</li>
+							<li>Typically use nested loops to process</li>
+						</ul>
 
 
 
 
 
-
-
-
-
-						<p><b>Designing a Program</b></p>
-						<ul><p><li>Understanding the Program</li><br>
-							<li>Using Design Tools to Create a Model</li><br>
-							<li>Develop Test Data</li><br></p></ul>
-						<p><b>Pseudocode</b></p>
-						<p>In computer science, pseudocode is a plain language description of the steps in an algorithm or another system. Pseudocode often uses structural conventions of a normal programming language, but is intended for human reading rather than machine reading. It typically omits details that are essential for machine understanding of the algorithm, such as variable declarations and language-specific code. The programming language is augmented with natural language description details, where convenient, or with compact mathematical notation. The purpose of using pseudocode is that it is easier for people to understand than conventional programming language code, and that it is an efficient and environment-independent description of the key principles of an algorithm. It is commonly used in textbooks and scientific publications to document algorithms and in planning of software and other algorithms.</p>
-						<h2><b>FlowChart</b></h2>
-						<p>A flowchart is a type of diagram that represents a workflow or process. A flowchart can also be defined as a diagrammatic representation of an algorithm, a step-by-step approach to solving a task.
-						The flowchart shows the steps as boxes of various kinds, and their order by connecting the boxes with arrows. This diagrammatic representation illustrates a solution model to a given problem. Flowcharts are used in analyzing, designing, documenting or managing a process or program in various fields.</p>
-						<p><b>How FlowChart important?</b></p>
-						<p>Flow charts are an important tool for the improvement of processes. By providing a graphical representation, they help project teams to identify the different elements of a process and understand the interrelationships among the various steps.</p>
-						<img src="images/flowchart.JPG" alt="" width="400" height="750" /><br>
-						<p><b>FlowChart Symbol</b></p>
-						<img src="images/flowchartsymbol.JPG" alt="" width="850" height="750" /><br>
-						<img src="images/flowchart2.JPG" alt="" width="700" height="500" /><br>
-						<h2><b>IPO or input process output</b></h2>
-						<p>Computer programs typically perform the following three-step process:</p>
-						<ul><p><li><b>Input</b> is received.</li><br>
-							<li>Some <b>process</b> is performed on the input.</li><br>
-							<li><b>Output</b>is produced.</li><br></p></ul>
-							<span class="image main"><img src="images/ipo.JPG" alt="" /></span>
-						<h2><b>variables</b></h2>
-						<p>Variable are: Storage location that have a name, Name-value pairs<br></p>
-						<span class="image main"><img src="images/variable.JPG" alt="" /></span>
-						<p><b>Valid Variable Names</b><br>1.Case sensitive.<br>2.Must start with a letter.<br>3.Underscores allowed in variable names.<br>4.Not allowed: + -</p>
-						<p><b>Reserved Words</b></p>
-						<span class="image main"><img src="images/reservedword.JPG" alt="" /></span>
-						<p>Reserved incorrect</p>
-						<span class="image main"><img src="images/reservedwordincorrect.JPG" alt="" /></span>
-						<p>Valid Variable Names</p>
-						<span class="image main"><img src="images/reservedwordcorrect.JPG" alt="" /></span>
-						<h2><b>data type</b></h2>
-						<p><b>Numeric Integer</b></p>
-						<p>Basic Data Types</p>
-						<ul><p><li>Numeric</li>
-							<ul><li>Integer</li>
-							<li>Floating point</li></ul>
-							<li>Boolean</li>
-							<li>String</li></p></ul>
-						<p>Composite Data Types (Later lessons)</p>
-						<ul><p><li>List</li>
-							<li>Tuple</li>
-							<li>Dictionary</li>
-							<li>Set</li></p></ul>
-						<h2><b>number</b></h2>
-						<p>Use numbers directly in your source code</p>
-						<img src="images/number.JPG" alt="" width="500" height="250" /><br>
-						<p>Incorrect to use Numbers</p>
-						<span class="image main"><img src="images/numberincorrect.JPG" alt="" /></span>
-						<p>Correct to use Numbers</p>
-						<span class="image main"><img src="images/numbercorrect.JPG" alt="" /></span>
-						<h2><b>boolean</b></h2>
-						<p>A Boolean variable can reference one of two values: True or False. Boolean variables are commonly used as flags<br>, which indicate whether specific conditions exist.</p>
-						<p>Hungry = True <br> Sleepy = False <br></p>
-						<span class="image main"><img src="images/boolean.JPG" alt="" /></span>
-						<p><b>String</b></p>
-						<ul><p><li>Represent text</li>
-							<li>Surrounded by quotes</li></ul>
-						<p>*** Strings are start with ' or " and end with ' or "</p>
-						<span class="image main"><img src="images/str.JPG" alt="" /></span>
-						<h2><b>Python operators</b></h2>
-						<p><b>What are operators in python?</b></p>
-						<p>Operators are special symbols in Python that carry out arithmetic or logical computation. The value that the operator operates on is called the operand.</p>
-						<p><b>Expression Operator And Operand</b></p>
-						<span class="image main"><img src="images/operator.JPG" alt="" /></span>
-						<p><b>Arithmetic Operators</b></p>
-						<span class="image main"><img src="images/operator2.JPG" alt="" /></span>
-						<p>Example</p>
-						<span class="image main"><img src="images/operator3.JPG" alt="" /></span>
-						<p><b>Operator Precedence</b></p>
-						<span class="image main"><img src="images/operatorprecedence.JPG" alt="" /></span>
-						<span class="image main"><img src="images/operatorprecedence2.JPG" alt="" /></span>
-						<p><b>Comparison Operators</b></p>
-						<span class="image main"><img src="images/comparison.JPG" alt="" /></span>
-						<p>Example</p>
-						<span class="image main"><img src="images/comparison2.JPG" alt="" /></span>
-						<p><b>Logical Operators</b></p>
-						<span class="image main"><img src="images/logical.JPG" alt="" /></span>
-						<p>Example</p>
-						<span class="image main"><img src="images/logical2.JPG" alt="" /></span>
-						<p><b>Bitwise Operators</b></p>
-						<span class="image main"><img src="images/bitwise.JPG" alt="" /></span>
-						<p><b>Assignment Operators</b></p>
-						<span class="image main"><img src="images/assignment.JPG" alt="" /></span>
-						<p><b>Identity Operators</b></p>
-						<p>is and is not are the identity operators in Python. They are used to check if two values (or variables) are located on the same part of the memory. Two variables that are equal does not imply that they are identical.</p>
-						<span class="image main"><img src="images/identity.JPG" alt="" /></span>
-						<p>Example</p>		
-						<span class="image main"><img src="images/identity2.JPG" alt="" /></span>
-						<p><b>Membership operators</b></p>
-						<p>in and not are the membership operators in Python. They are used to test whether a value or variable is found in a sequence (string, list, tuple, set and dictionary).<br> In a dictionary we can only test for presence of key, not the value.</p>
-						<span class="image main"><img src="images/membership.JPG" alt="" /></span>
-						<p>Example</p>		
-						<span class="image main"><img src="images/membership2.JPG" alt="" /></span>
-						<h2><b>input</b></h2>
-						<p><b>Input()</b></p>
-						<p>input (): This function first takes the input from the user and converts it into a string. The type of the returned object always will be <type ‘str’>. It does not evaluate the expression it just returns the complete statement as String. For example, Python provides a built-in function called input which takes the input from the user. When the input function is called it stops the program and waits for the user’s input. When the user presses enter, the program resumes and returns what the user typed. </p>
-						<p><b>variable = input(promt)</b></p>
-						<p><b>name input('What is your name? ')</b></p>
-						<span class="image main"><img src="images/input.JPG" alt="" /></span>
-						<p><b>Input Number</b></p>We will see how to take integer input in Python. As we know that Python’s built-in input() function always returns a str(string) class object. So for taking integer input we have to type cast those inputs into integers by using Python built-in int() function.
-						<p>Example</p>
-						<span class="image main"><img src="images/input2.JPG" alt="" /></span>
-						<p><b>Medhod</b><br>1. string_value = input('How many hours did you play games? '<br> hour = int(string_value)<br>2. hours = int(input("How many hours did you play games? '))</p>
-						<p>Example</p>
-						<span class="image main"><img src="images/input3.JPG" alt="" /></span>
-						<p><b>Read Multiple Values From Keyboard</b></p>
-						<p>Example</p>
-						<span class="image main"><img src="images/readmulti.JPG" alt="" /></span>
-						<h2><b>comments</b></h2>
-						<p>Comments in Python is the inclusion of short descriptions along with the code to increase its readability. A developer uses them to write his or her thought process while writing the code. It explains the basic logic behind why a particular line of code was written. They are just meant for the coders themselves or other developers to understand a piece of code, especially since the Python interpreter completely ignores comments in Python. You can see this in the following example. </p>
-						<p>*** Messages that use # in front will not be taken into account in the program. ***</p>
-						<p>Use # put in front <br> Example</p>
-						<span class="image main"><img src="images/comment.JPG" alt="" /></span>
-
+						
 
 
 					</div>
