--- a/L07.html
+++ b/L07.html
@@ -130,11 +130,12 @@
 								indexes</li>
 							<li>Typically use nested loops to process</li>
 						</ul>
+						<p><b>Two-Dimensional Lists</b></p>
+						<img src="images/two-dimensional2.png" alt="" /><br><br>
+						<img src="images/two-dimensional3.png" alt="" /><br><br>
 
-
-
-
-
+						<h2><b>tuples</b></h2>
+						<p><b>Introduction</b></p>
 						
 
 
