--- a/L07.html
+++ b/L07.html
@@ -136,8 +136,99 @@
 
 						<h2><b>tuples</b></h2>
 						<p><b>Introduction</b></p>
+						<ul><li><b>Tuple: </b>immutable sequence</li>
+							<ul><li>Very similar to a list</li>
+								<li>Once it is created it cannot be changed</li>
+								<li>Format: <b>tuple_name = (item1, item2)</b></li>
+								<li>Tuples support operations as lists</li>
+								<ul><li>Subscript indexing for retrieving elements</li>
+									<li>Methods such as <b>index</b></li>
+									<li>Built in functions such as <b>len, min, max</b></li>
+									<li>Slicing expressions</li>
+									<li><b>The in, +,</b> and * operators</li>
+								</ul>
+							</ul>
+						</ul>
+						
+						<ul><li>Tuples donot support the methods : </li>
+							<ul><li><b>append</b></li>
+								<li><b>remove</b></li>
+								<li><b>insert</b></li>
+								<li><b>reverse</b></li>
+								<li><b>sort</b></li>
+							</ul>
+						</ul>
+
+						<ul><li>Advantages for using tuples over lists:</li>
+							<ul><li>Processing tuples is faster than processing lists</li>
+								<li>Tuples are safe</li>
+								<li>Some operations in Python require use of tuples</li>
+							</ul>
+							<li><b>list() </b>function: converts tuple to list</li>
+							<li><b>tuple() </b>function: converts list to tuple</li>
+						</ul>
+						<p><b>Tuples</b></p>
+						<p>Python Tuple is a collection of objects separated by commas. In some ways, a tuple is similar to a list in terms of indexing, nested objects, and repetition but a tuple is immutable, unlike lists which are mutable.</p>
+						<p><b>Note : </b>If you want to creat a tuple with just one element, you must write a trailing comma after the element's value, as shown here:</p>
+						<p>my_tuple = (1,) # Creates a tuple with one element.</p>
+						<p>If you omit the comma, you will not create a tuple. For example, the following staetment simply assigns the integer value 1 to the value variable :</p>
+						<p>value = (1) # Creates an integer.</p>
+
+						<h2><b>lists to file</b></h2>
+						<p><b>Write Lists and Read Lists from File</b></p>
+						<p><b>Example Writeline and Readline</b></p>
+						<img src="images/writelines.png" alt="" /><br><br>
 						
 
+						<h2><b>mathplot</b></h2>
+						<p><b>Introduction</b></p>
+
+						<p><b>Install matplotlib</b> Type pip install matplotlib on terminal in Visual Studio Code</p>
+						<img src="images/pip.png" alt="" /><br><br>
+						<img src="images/pip2.jpg" alt="" /><br><br>
+						<p>Type pip install matplotlib</p>
+						<img src="images/pip3.png" alt="" /><br><br>
+						<p>And then Enter</p>
+
+						<ul><li>The matplotlib package is a library for creating two-
+							dimensional charts and graphs.</li>
+							<li>It is not part of the standard Python library, so you will have to
+								install it separately, after you have installed Python on your
+								systemThe <b>matplotlib</b> package is a library for creating two-
+								dimensional charts and graphs.</li>
+						</ul>
+						<p>Linegraph</p>
+						<img src="images/linegraph.png" alt="" width="1000" /><br><br>
+						<p>Linegraph 2</p>
+						<img src="images/linegraph2.png" alt="" width="1000" /><br><br>
+						<p>Barchart</p>
+						<img src="images/bargraph.png" alt="" width="1000" /><br><br>
+						<ul><li>The bar function has a color parameter that you
+							can use to change the colors of the bars.</li>
+							<li>The argument that you pass into this parameter is a
+							tuple containing a series of color codes.</li>
+						</ul>
+						<p>Color Example</p>
+						<img src="images/color code.png" alt="" /><br><br>
+						<p>Barchart 2</p>
+						<img src="images/bargraph2.png" alt="" width="1050" /><br><br>
+						<p>Pine Chart</p>
+						<img src="images/piechart.png" alt="" /><br><br>
+
+						<h2><b>summary</b></h2>
+						<p>Lists, including : </p>
+						<ul><li>Repetition and concatenation operators</li>
+							<li>Indexing</li>
+							<li>Techniques for processing lists</li>
+							<li>Slicing and copying lists</li>
+							<li>List methods and built-in functions for lists</li>
+							<li>Two-dimensional lists</li>
+						</ul>
+						<p>Tuples, including : </p>
+						<ul><li>Immutability</li>
+							<li>Difference from and advantages over lists</li>
+							<li>Plotting charts and graphs with the <b>matplotlib</b> Package</li>
+						</ul>
 
 					</div>
 				</div>
