--- a/L01.html
+++ b/L01.html
@@ -77,7 +77,7 @@
 							<h3>System Software</h3>
 							<ul><p><li><b>Operating Systems:</b> Windows, Mac Os, Linux</li><br>
 								<li><b>Utility Programs:</b> Compression, Virus scanners, Back up</li><br>
-								<li><b>Software Development:</b>Assemblers, Compilers, Interpreter</li><br></ul>
+								<li><b>Software Development:</b> Assemblers, Compilers, Interpreter</li><br></ul>
 							<h3>Application Software</h3>
 							<ul><p><li><b>Example Application:</b> Microsoft word, PowerPoint, Excel, Photoshop</li><br></ul>
 							<h2>How Computer store data?</h2>
@@ -125,7 +125,7 @@
 							The flowchart shows the steps as boxes of various kinds, and their order by connecting the boxes with arrows. This diagrammatic representation illustrates a solution model to a given problem. Flowcharts are used in analyzing, designing, documenting or managing a process or program in various fields.</p>
 							<p><b>How FlowChart important?</b></p>
 							<p>Flow charts are an important tool for the improvement of processes. By providing a graphical representation, they help project teams to identify the different elements of a process and understand the interrelationships among the various steps.</p>
-							<img src="images/flowchart.JPG" alt="" width="400" height="750" /><br>
+							<img src="images/flowchart.JPG" alt="" width="250" height="700" /><br>
 							<p><b>FlowChart Symbol</b></p>
 							<img src="images/flowchartsymbol.JPG" alt="" width="850" height="750" /><br>
 							<img src="images/flowchart2.JPG" alt="" width="700" height="500" /><br>
@@ -133,7 +133,7 @@
 							<p>Computer programs typically perform the following three-step process:</p>
 							<ul><p><li><b>Input</b> is received.</li><br>
 								<li>Some <b>process</b> is performed on the input.</li><br>
-								<li><b>Output</b>is produced.</li><br></p></ul>
+								<li><b>Output</b> is produced.</li><br></p></ul>
 								<span class="image main"><img src="images/ipo.JPG" alt="" /></span>
 							<h2><b>variables</b></h2>
 							<p>Variable are: Storage location that have a name, Name-value pairs<br></p>
@@ -189,11 +189,11 @@
 							<p><b>Comparison Operators</b></p>
 							<span class="image main"><img src="images/comparison.JPG" alt="" /></span>
 							<p>Example</p>
-							<span class="image main"><img src="images/comparison2.JPG" alt="" /></span>
+							<img src="images/comparison2.JPG" alt="" />
 							<p><b>Logical Operators</b></p>
 							<span class="image main"><img src="images/logical.JPG" alt="" /></span>
 							<p>Example</p>
-							<span class="image main"><img src="images/logical2.JPG" alt="" /></span>
+							<img src="images/logical2.JPG" alt="" />
 							<p><b>Bitwise Operators</b></p>
 							<span class="image main"><img src="images/bitwise.JPG" alt="" /></span>
 							<p><b>Assignment Operators</b></p>
