--- a/L08.html
+++ b/L08.html
@@ -202,9 +202,49 @@
 							bytes that can easily be stored in a file</li>
 							<li>Pickling: serializing an object</li>
 							<li>To pickle an object:</li>
-							<li>Pickling: serializing an object</li>
+							<ul><li>Import the pickle module</li>
+								<li>Open a file for binary writing</li>
+								<li>Call the pickle.dump function</li>
+								<li>Format: pickle.dump(object, file)</li>
+								<li>Close the file</li>
+							</ul>
+							<li>You can pickle multiple objects to one file prior to closing the file</li>
+							<li>Unpickling: retrieving pickled object</li>
+							<li>To unpickle an object:</li>
+								<ul><li>Import the <b>pickle</b> module</li>
+									<li>Open a file for binary writing</li>
+									<li>Call the <b>pickle.load</b> function</li>
+									<li>Format: <b>pickle.load(file)</b></li>
+									<li>Close the file</li>
+								</ul>
+							<li>You can unpickle multiple objects from the file</li>
+						</ul>
+						<p><b>Example Pickle Objects</b></p>
+						<img src="images/pickle.png" alt="" /><br><br>
+						<img src="images/pickle2.png" alt="" /><br><br>
+
+						<p><b>Example Unpickle Objects</b></p>
+						<img src="images/unpickle.png" alt="" /><br><br>
+						<img src="images/unpickle2.png" alt="" /><br><br>
+
+						<h2><b>summary</b></h2>
+						<p><b>Dictionaries, including : </b></p>
+						<ul><li>Creating dictionaries</li>
+							<li>Inserting, retrieving, adding, and deleting key-value pairs</li>
+							<li>for loops and in and not in operators</li>
+							<li>Dictionary methods</li>
 						</ul>
 
+						<p><b>Sets : </b></p>
+						<ul><li>Creating sets</li>
+							<li>Adding elements to and removing elements from sets</li>
+							<li>Finding set union, intersection, difference and symmetric difference</li>
+							<li>Finding subsets and supersets</li>
+						</ul>
+
+						<p><b>Serializing objects</b></p>
+						<ul><li>Pickling and unpickling objects</li>
+						</ul>
 
 					</div>
 				</div>
